--- a/client/css/mixins.less
+++ b/client/css/mixins.less
@@ -47,6 +47,14 @@
 
 }
 
+.backface-visibility() {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility:    hidden;
+  -ms-backface-visibility:     hidden;
+  -o-backface-visibility:      hidden;
+  backface-visibility:         hidden;
+}
+
 .transform(@string) {
   -webkit-transform: @string;
   -moz-transform: @string;
